Ditch truth
The vast majority of tests in ODL is using JUnit/Hamcreast, migrate
away from Google Truth, as it does not offset any real advantages.

Change-Id: Idc4a8e44c3f8cfed6ca7b9d60b6c42520f3e14f9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>